--- a/InplaceSearching/InplaceSearching.csproj
+++ b/InplaceSearching/InplaceSearching.csproj
@@ -52,8 +52,14 @@
 		<PackageReference Include="CommunityToolkit.Maui" Version="3.1.0" />
 		<PackageReference Include="CommunityToolkit.Maui.Markup" Version="2.1.0" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
+		<PackageReference Include="DynamicData" Version="7.12.11" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+		<PackageReference Include="ReactiveUI" Version="18.4.1" />
 		<PackageReference Include="Realm" Version="10.18.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Resources\Styles\" />
 	</ItemGroup>
 
 </Project>
